--- a/src/Table/index.less
+++ b/src/Table/index.less
@@ -3,10 +3,12 @@
     border-collapse: collapse;
 
     th {
+      box-sizing: border-box;
       padding: 0;
     }
 
     td {
+      box-sizing: border-box;
       padding: 0;
     }
   }
