hide freezed columns if its not scrolled

--- a/src/Table/Header.less
+++ b/src/Table/Header.less
@@ -43,12 +43,12 @@
     border-right: @border-line;
   }
 
-  .freezed-right {
-    border-left: @border-line;
-  }
-
   .sub-table-divider {
     border-top: @border-line;
+  }
+
+  .freezed-left {
+    border-right: @border-line;
   }
 }
 
